@@ -35,6 +35,7 @@ OPENSEADRAGON CHANGELOG
 * MouseTracker: Per #1863, dropped support for Internet Explorer < 11 (#1872 @msalsbery)
 * Dropped support for older browsers (IE < 11) (#1949 @msalsbery)
 * Removed deprecated OpenSeadragon.getEvent function (#1949 @msalsbery)
+* Fixed simulated drag events in navigator tests (#1949 @msalsbery)
 
 2.4.2:
 
